# career_vibe-module-python

./: .env.example  .gitignore  Dockerfile  README.md  SUCCESS.md  TEST_CV_FEATURES.md  docker-compose.yml  pyproject.toml  requirements.txt  run.txt  sample_cv.txt  test_cv_quick.py  test_recommendation_improvement.py
src/: job.xlsx
src/ai_project/: __init__.py  app.py  db.py  main.py
src/ai_project/services/: chatbot.py  cv_matcher.py  job_data.py  recommendation.py  vector_store.py
src/data/faiss/: jobs.index  jobs.metadata.pkl
tests/: test_api.py  test_chatbot.py  test_main.py
