[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_project"
version = "0.1.0"
description = "Minimal Python project scaffolded by assistant"
readme = "README.md"
authors = [ { name = "Your Name" } ]
dependencies = ["fastapi", "uvicorn[standard]"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"
testpaths = ["tests"]
